--- a/index.html
+++ b/index.html
@@ -282,56 +282,7 @@
 </div>
 
 
-          <!-- Values
-          <div class="grid md:grid-cols-2 gap-6">
-            <div
-              class="bg-gradient-to-br from-primary-light to-primary-light p-6 rounded-2xl shadow-md hover:shadow-lg transition">
-              <div
-                class="w-12 h-12 bg-gradient-to-br from-primary to-primary-dark rounded-lg flex items-center justify-center mb-4">
-                <i class="fas fa-lightbulb text-white"></i>
-              </div>
-              <h3 class="text-xl font-bold text-gray-800 mb-2">استيكرات مميزة وجذابة</h3>
-              <p class="text-gray-600">نقدم تصميمات استيكرات مبتكرة تعكس هوية علامتك التجارية وتلفت الانتباه بشكل
-                احترافي.</p>
-
-            </div>
-
-            <div
-              class="bg-gradient-to-br from-primary-light to-primary-light p-6 rounded-2xl shadow-md hover:shadow-lg transition">
-              <div
-                class="w-12 h-12 bg-gradient-to-br from-primary to-primary rounded-lg flex items-center justify-center mb-4">
-                <i class="fas fa-award text-white"></i>
-              </div>
-              <h3 class="text-xl font-bold text-gray-800 mb-2">طباعة الهويات البصرية</h3>
-              <p class="text-gray-600">نقدم خدمات طباعة احترافية للهويات البصرية لتعكس هوية علامتك التجارية بشكل واضح
-                وجذاب.</p>
-
-            </div>
-
-            <div
-              class="bg-gradient-to-br from-blue-50 to-purple-50 p-6 rounded-2xl shadow-md hover:shadow-lg transition">
-              <div
-                class="w-12 h-12 bg-gradient-to-br from-primary to-primary rounded-lg flex items-center justify-center mb-4">
-                <i class="fas fa-handshake text-white"></i>
-              </div>
-              <h3 class="text-xl font-bold text-gray-800 mb-2">ورش القص والحفر</h3>
-              <p class="text-gray-600">نوفر خدمات متقدمة للقص والحفر على مختلف المواد بدقة وجودة عالية لتلبية احتياجات
-                عملك.</p>
-
-            </div>
-
-            <div
-              class="bg-gradient-to-br from-primary-50 to-primary-50 p-6 rounded-2xl shadow-md hover:shadow-lg transition">
-              <div
-                class="w-12 h-12 bg-gradient-to-br from-primary to-primary rounded-lg flex items-center justify-center mb-4">
-                <i class="fas fa-target text-white"></i>
-              </div>
-              <h3 class="text-xl font-bold text-gray-800 mb-2">طباعة الاستيكر والفينيل</h3>
-              <p class="text-gray-600">نقدم طباعة استيكر وفينيل عالية الجودة تضيف لمسة احترافية لعلامتك التجارية وتلفت
-                الانتباه.</p>
-
-            </div>
-          </div> -->
+      
         </div>
 
         <!-- Image/Visual -->
@@ -489,7 +440,7 @@
           </div>
 
           <!-- العنوان -->
-          <h3 class="text-xl font-bold mb-4">طباعة البنرات والفليكس</h3>
+          <h3 class="text-xl font-bold mb-4">طباعة البنرات والفليكس والفينيل</h3>
 
           <!-- الوصف -->
           <p class="text-gray-600 mb-6">
@@ -554,6 +505,9 @@
       </div>
     </div>
   </section>
+
+
+  
 
   <!-- Call To Action -->
   <div
@@ -654,16 +608,70 @@
 
         <!-- الصور -->
         <div class="grid grid-cols-2 gap-6">
-          <div class="rounded-2xl overflow-hidden shadow-lg transform hover:scale-105 transition duration-500">
-            <img src="./assets/img/hero-1.png" alt="اعلان فاخر" class="w-full h-full object-cover">
-          </div>
+
           <div class="rounded-2xl overflow-hidden shadow-lg transform hover:scale-105 transition duration-500 mt-10">
-            <img src="./assets/img/hero-2.png" alt="تصميم براند" class="w-full h-full object-cover">
+            <img src="./assets/img/hero-1.png" alt="تصميم براند" class="w-full h-full object-cover">
           </div>
+          <div class="rounded-2xl overflow-hidden shadow-lg transform hover:scale-105 transition duration-500">
+            <img src="./assets/img/hero-2.png" alt="اعلان فاخر" class="w-full h-full object-cover">
+          </div>
+          
         </div>
       </div>
     </div>
   </section>
+
+
+  <!-- Values -->
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+  <div
+    class="bg-gradient-to-br from-primary-light to-primary-light p-6 rounded-2xl shadow-md hover:shadow-lg transition">
+    <div
+      class="w-12 h-12 bg-gradient-to-br from-primary to-primary-dark rounded-lg flex items-center justify-center mb-4">
+      <i class="fas fa-lightbulb text-white"></i>
+    </div>
+    <h3 class="text-xl font-bold text-gray-800 mb-2">استيكرات مميزة وجذابة</h3>
+    <p class="text-gray-600">
+      نقدم تصميمات استيكرات مبتكرة تعكس هوية علامتك التجارية وتلفت الانتباه بشكل احترافي.
+    </p>
+  </div>
+
+  <div
+    class="bg-gradient-to-br from-primary-light to-primary-light p-6 rounded-2xl shadow-md hover:shadow-lg transition">
+    <div
+      class="w-12 h-12 bg-gradient-to-br from-primary to-primary rounded-lg flex items-center justify-center mb-4">
+      <i class="fas fa-award text-white"></i>
+    </div>
+    <h3 class="text-xl font-bold text-gray-800 mb-2">طباعة الهويات البصرية</h3>
+    <p class="text-gray-600">
+      نقدم خدمات طباعة احترافية للهويات البصرية لتعكس هوية علامتك التجارية بشكل واضح وجذاب.
+    </p>
+  </div>
+
+  <div
+    class="bg-gradient-to-br from-primary-50 to-primary-50 p-6 rounded-2xl shadow-md hover:shadow-lg transition">
+    <div
+      class="w-12 h-12 bg-gradient-to-br from-primary to-primary rounded-lg flex items-center justify-center mb-4">
+      <i class="fas fa-handshake text-white"></i>
+    </div>
+    <h3 class="text-xl font-bold text-gray-800 mb-2">   ورش القص والحفر بالليزر</h3>
+    <p class="text-gray-600">
+      نوفر خدمات متقدمة للقص والحفر على مختلف المواد بدقة وجودة عالية لتلبية احتياجات عملك.
+    </p>
+  </div>
+
+  <div
+    class="bg-gradient-to-br from-primary-50 to-primary-50 p-6 rounded-2xl shadow-md hover:shadow-lg transition">
+    <div
+      class="w-12 h-12 bg-gradient-to-br from-primary to-primary rounded-lg flex items-center justify-center mb-4">
+      <i class="fas fa-handshake text-white"></i>
+    </div>
+    <h3 class="text-xl font-bold text-gray-800 mb-2">طباعة الاستيكر والفينيل</h3>
+    <p class="text-gray-600">
+      نقدم طباعة استيكر وفينيل عالية الجودة تضيف لمسة احترافية لعلامتك التجارية وتلفت الانتباه.
+    </p>
+  </div>
+</div>
 
 
 
@@ -946,57 +954,7 @@
 .animate-zoom-in { animation: zoom-in 10s ease forwards; }
 </style>
 
-  <!--  سكشن شركاؤنا في النجاح -->
-  <section class="bg-white py-24 relative">
-    <div class="container mx-auto px-6">
-      <!-- العنوان -->
-      <div class="text-center mb-16">
-        <h2 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">
-          شركاؤنا في <span
-            class="text-primary bg-clip-text bg-gradient-to-r from-primary to-primary">النجاح</span>
-        </h2>
-        <p class="text-lg text-gray-600 max-w-2xl mx-auto">
-          نفتخر بثقة عملائنا الذين شاركونا قصص نجاح ملهمة، وتركنا بصمتنا ايجبتية في مشاريعهم.
-        </p>
-      </div>
-
-      <!-- لوجوهات الشركات -->
-      <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-10 items-center">
-        <div class="p-4 grayscale hover:grayscale-0 transition duration-500">
-          <img src="https://source.unsplash.com/200x100/?brand,logo" alt="Partner 1"
-            class="mx-auto h-16 object-contain">
-        </div>
-        <div class="p-4 grayscale hover:grayscale-0 transition duration-500">
-          <img src="https://source.unsplash.com/200x100/?corporate,logo" alt="Partner 2"
-            class="mx-auto h-16 object-contain">
-        </div>
-        <div class="p-4 grayscale hover:grayscale-0 transition duration-500">
-          <img src="https://source.unsplash.com/200x100/?business,logo" alt="Partner 3"
-            class="mx-auto h-16 object-contain">
-        </div>
-        <div class="p-4 grayscale hover:grayscale-0 transition duration-500">
-          <img src="https://source.unsplash.com/200x100/?company,logo" alt="Partner 4"
-            class="mx-auto h-16 object-contain">
-        </div>
-        <div class="p-4 grayscale hover:grayscale-0 transition duration-500">
-          <img src="https://source.unsplash.com/200x100/?agency,logo" alt="Partner 5"
-            class="mx-auto h-16 object-contain">
-        </div>
-        <div class="p-4 grayscale hover:grayscale-0 transition duration-500">
-          <img src="https://source.unsplash.com/200x100/?technology,logo" alt="Partner 6"
-            class="mx-auto h-16 object-contain">
-        </div>
-      </div>
-
-      <!-- CTA -->
-      <div class="text-center mt-16">
-        <a href="#contact"
-          class="inline-block bg-gradient-to-r from-primary to-primary text-white px-8 py-4 rounded-2xl shadow-lg text-lg font-semibold hover:scale-105 transform transition">
-          كن شريكنا القادم
-        </a>
-      </div>
-    </div>
-  </section>
+ 
 
 </div>
 
